--- a/stock-service/pom.xml
+++ b/stock-service/pom.xml
@@ -43,7 +43,11 @@
             <scope>test</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.9</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
