--- a/training-service/src/main/resources/application.properties
+++ b/training-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
-server.address=0.0.0.0
+#server.address=0.0.0.0
 server.port=0
 spring.application.name=training-service
-eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka
 
 
-server.servlet.context-path=/biochar
+server.servlet.context-path=/biochar/training
 spring.datasource.url=jdbc:mysql://localhost:3306/training-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
