--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 server.address=0.0.0.0
 server.port=0
+###server.port=8085
 spring.application.name=user-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
 
@@ -13,6 +14,12 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+
+
+
 ## LOGGING ##
+logging.level.root = info 
 ##Logging pattern for the console ##
 logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{45} - %msg %n
+
+
