--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,8 @@ target/
 .idea/compiler.xml
 .idea/libraries/
 .idea/workspace.xml
-<<<<<<< HEAD
 .idea/uiDesigner.xml
-.idea
-=======
-.idea/uiDesig   ner.xml
->>>>>>> d348e1ad8a2fffa4df832fa25e40c80680167aef
+.idea/*
 *.iws
 *.iml
 *.ipr
