--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 server.address=0.0.0.0
-server.port=0
+server.port=9099
 spring.application.name=stock-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
 
@@ -11,7 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ##s#
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ## LOGGING ##
 ##Logging pattern for the console ##
