--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ##s#
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ## LOGGING ##
 ##Logging pattern for the console ##
