--- a/analysis-service/src/main/resources/application.properties
+++ b/analysis-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=analysis-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
 
 
-server.servlet.context-path=/biochar
+server.servlet.context-path=/biochar/analysis
 spring.datasource.url=jdbc:mysql://localhost:3306/analysis-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
