--- a/training-service/pom.xml
+++ b/training-service/pom.xml
@@ -67,6 +67,11 @@
             <version>0.15.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.2.0.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
