--- a/training-service/src/main/resources/application.properties
+++ b/training-service/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.jpa.hibernate.ddl-auto=update
 logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{45} - %msg %n
 
 
+## MAHOUT ##
+#mahout.local=true
+#mahout.hadoop.home=C:\Users\SBS\Documents\Mahout
+#mahout.hadoop.version=3.3.0
+#mahout.hadoop.fs=hdfs://localhost:9000
