--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.cloud.gateway.routes[5].predicates[0]=Path=/biochar/training/**
 ## User Service Route
 spring.cloud.gateway.routes[6].id=user-service
 spring.cloud.gateway.routes[6].uri=lb://user-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/biochar/user/**
+spring.cloud.gateway.routes[6].predicates[0]=Path=/biochar/user-service/**
 
 ## Humain ressources Service Route
 spring.cloud.gateway.routes[7].id=hr-service
