--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 
 server.address=0.0.0.0
-server.port=0
-###server.port=8085
 spring.application.name=user-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
+server.port=0
+###server.port=8085
 
-
-server.servlet.context-path=/biochar
+server.servlet.context-path=/biochar/user-service
 spring.datasource.url=jdbc:mysql://localhost:3306/user-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ##s#
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 
@@ -23,3 +23,31 @@ logging.level.root = info
 logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{45} - %msg %n
 
 
+
+
+
+
+### https://myaccount.google.com/u/4/apppasswords
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=belhsenbachouch55@gmail.com
+spring.mail.password=vzvhkipyidnxmeev
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+
+###server.port=8443
+###server.ssl.enabled=true
+###server.ssl.key-store: src/main/resources/bootsecurity.p12
+###server.ssl.key-store-password: bootsecurity
+###server.ssl.keyStoreType: PKCS12
+###server.ssl.keyAlias: bootsecurity
+
+
+###spring.thymeleaf.cache=false
+###spring.thymeleaf.enabled=true
+###spring.thymeleaf.prefix=classpath:/templates/
+###spring.thymeleaf.suffix=.html
