--- a/training-service/src/main/resources/application.properties
+++ b/training-service/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.jpa.hibernate.ddl-auto=update
 logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{45} - %msg %n
 
 
+## MongoDB ##
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=training-service
+
