--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 server.address=0.0.0.0
 server.port=9099
 spring.application.name=stock-service
@@ -9,7 +8,7 @@ server.servlet.context-path=/biochar
 spring.datasource.url=jdbc:mysql://localhost:3306/stock-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-### JPA / HIBERNATE ##s#
+### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 ## LOGGING ##
