--- a/training-service/src/main/resources/application.properties
+++ b/training-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #server.address=0.0.0.0
-server.port=0
+server.port=9022
 spring.application.name=training-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka
-
+eureka.client.enabled=false
 
 server.servlet.context-path=/biochar/training
 spring.datasource.url=jdbc:mysql://localhost:3306/training-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -16,3 +16,10 @@ spring.jpa.hibernate.ddl-auto=update
 ## LOGGING ##
 ##Logging pattern for the console ##
 logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{45} - %msg %n
+
+
+## MongoDB ##
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=training-service
+
