--- a/stock-service/pom.xml
+++ b/stock-service/pom.xml
@@ -72,6 +72,12 @@
             <version>2.1.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.14.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
