--- a/internship-service/src/main/resources/application.properties
+++ b/internship-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 server.address=0.0.0.0
-server.port=0
+server.port=9050
 spring.application.name=internship-service
-eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka
+eureka.client.enabled=false
 
-
-server.servlet.context-path=/biochar
+server.servlet.context-path=/biochar/internship
 spring.datasource.url=jdbc:mysql://localhost:3306/internship-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
@@ -16,3 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 ## LOGGING ##
 ##Logging pattern for the console ##
 logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{45} - %msg %n
+
+spring.mvc.format.date=yyyy-MM-dd
