--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 server.address=0.0.0.0
 spring.application.name=user-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
-server.port=8099
+#server.port=8099
+server.port=0
 server.servlet.context-path=/biochar/user-service
 
 
