--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,44 +5,44 @@ logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocato
 logging.level.org.springframework.cloud.gateway= TRACE
 server.port=8099
 
-
-## Discover Server Route
-spring.cloud.gateway.routes[0].id=discovery-server
-spring.cloud.gateway.routes[0].uri=http://localhost:8761/
-spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.routes[0].filters[0]=SetPath=/
-
-## Discover Server Static Resources Route
-spring.cloud.gateway.routes[1].id=discovery-server-static
-spring.cloud.gateway.routes[1].uri=http://localhost:8761/
-spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka/**
-
-## Analysis Service Route
-spring.cloud.gateway.routes[2].id=analysis-service
-spring.cloud.gateway.routes[2].uri=lb://analysis-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/biochar/analysis/**
-
-## Internship Service Route
-spring.cloud.gateway.routes[3].id=internship-service
-spring.cloud.gateway.routes[3].uri=lb://internship-service
-spring.cloud.gateway.routes[3].predicates[0]=Path=/biochar/internship/**
-
-## Stock Service Route
-spring.cloud.gateway.routes[4].id=stock-service
-spring.cloud.gateway.routes[4].uri=lb://stock-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/biochar/stock/**
-
-## Training Service Route
-spring.cloud.gateway.routes[5].id=training-service
-spring.cloud.gateway.routes[5].uri=lb://training-service
-spring.cloud.gateway.routes[5].predicates[0]=Path=/biochar/training/**
-
-## User Service Route
-spring.cloud.gateway.routes[6].id=user-service
-spring.cloud.gateway.routes[6].uri=lb://user-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/biochar/user/**
-
-## Humain ressources Service Route
-spring.cloud.gateway.routes[7].id=hr-service
-spring.cloud.gateway.routes[7].uri=lb://hr-service
-spring.cloud.gateway.routes[7].predicates[0]=Path=/biochar/hr/**
+#
+### Discover Server Route
+#spring.cloud.gateway.routes[0].id=discovery-server
+#spring.cloud.gateway.routes[0].uri=http://localhost:8761/
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/web
+#spring.cloud.gateway.routes[0].filters[0]=SetPath=/
+#
+### Discover Server Static Resources Route
+#spring.cloud.gateway.routes[1].id=discovery-server-static
+#spring.cloud.gateway.routes[1].uri=http://localhost:8761/
+#spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka/**
+#
+### Analysis Service Route
+#spring.cloud.gateway.routes[2].id=analysis-service
+#spring.cloud.gateway.routes[2].uri=lb://analysis-service
+#spring.cloud.gateway.routes[2].predicates[0]=Path=/biochar/analysis/**
+#
+### Internship Service Route
+#spring.cloud.gateway.routes[3].id=internship-service
+#spring.cloud.gateway.routes[3].uri=lb://internship-service
+#spring.cloud.gateway.routes[3].predicates[0]=Path=/biochar/internship/**
+#
+### Stock Service Route
+#spring.cloud.gateway.routes[4].id=stock-service
+#spring.cloud.gateway.routes[4].uri=lb://stock-service
+#spring.cloud.gateway.routes[4].predicates[0]=Path=/biochar/stock/**
+#
+### Training Service Route
+#spring.cloud.gateway.routes[5].id=training-service
+#spring.cloud.gateway.routes[5].uri=lb://training-service
+#spring.cloud.gateway.routes[5].predicates[0]=Path=/biochar/training/**
+#
+### User Service Route
+#spring.cloud.gateway.routes[6].id=user-service
+#spring.cloud.gateway.routes[6].uri=lb://user-service
+#spring.cloud.gateway.routes[6].predicates[0]=Path=/biochar/user-service/**
+#
+### Humain ressources Service Route
+#spring.cloud.gateway.routes[7].id=hr-service
+#spring.cloud.gateway.routes[7].uri=lb://hr-service
+#spring.cloud.gateway.routes[7].predicates[0]=Path=/biochar/hr/**
