--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>internship-service</module>
         <module>discovery-server</module>
         <module>api-gateway</module>
+        <module>mail-service</module>
     </modules>
 
     <properties>
