--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -94,6 +94,17 @@
             <version>1.10.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+           <!-- <version>2.8.11</version>-->
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.13.4</version>
+        </dependency>
     </dependencies>
 
 </project>
