--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-           <!-- <version>2.8.11</version>-->
+           <version>2.8.1</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
