--- a/mail-service/pom.xml
+++ b/mail-service/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>2.8.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
