--- a/mail-service/src/main/resources/application.properties
+++ b/mail-service/src/main/resources/application.properties
@@ -6,6 +6,10 @@ server.port=0
 server.servlet.context-path=/biochar/mail-service
 
 
+myApp.hostPathUserService=http://localhost:8099/biochar/mail-service/attachment/download/
+
+
+
 ## LOGGING ##
 logging.level.root = info 
 ##Logging pattern for the console ##
