--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.address=0.0.0.0
 server.port=9099
 spring.application.name=stock-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
-
+eureka.client.enabled=false
 
 server.servlet.context-path=/biochar/stock-service
 spring.datasource.url=jdbc:mysql://localhost:3306/stock-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
