--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-eureka.instance.hostname=localhost
+eureka.instance.hostname=0.0.0.0
+#eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 spring.application.name=discover-server
