--- a/hr-service/src/main/resources/application.properties
+++ b/hr-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 server.address=0.0.0.0
-server.port=9060
+server.port=0
 spring.application.name=hr-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
+server.servlet.context-path=/biochar/hr-service
 
-server.servlet.context-path=/biochar
+
 spring.datasource.url=jdbc:mysql://localhost:3306/hr-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
