--- a/training-service/src/main/resources/application.properties
+++ b/training-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-#server.address=0.0.0.0
-server.port=9022
+server.address=0.0.0.0
+server.port=0
 spring.application.name=training-service
 eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka
-eureka.client.enabled=false
+#eureka.client.enabled=false
 
 server.servlet.context-path=/biochar/training
 spring.datasource.url=jdbc:mysql://localhost:3306/training-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
